se modifico la pagina principal

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,49 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bootstrap Example</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <style>
+            h1 {
+                color: black;
+            }
+
+            body {
+                background-color: beige;
+            }
+        </style>
     </head>
+
     <body>
-        <div>TODO write content</div>
-    </body>
+        <h1 align="center"><i>Análisis de Sistemas II - Equipo #2</i></h1>
+    <center>
+        <div class="col-lg-12">
+            <div class="row">
+                <div class="col-lg-3">
+                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
+                        Crear estudiante
+                    </button>
+                </div>
+                <div class="col-lg-3">
+                    <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false">
+                        Crear curso
+                    </button>
+                </div>
+                <div class="col-lg-3">
+                    <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false">
+                        Importar estudiantes.
+                    </button>
+                </div>
+                <div class="col-lg-3">
+                    <button type="button" class="btn btn-success" data-toggle="button" aria-pressed="false">
+                        Importar cursos.
+                    </button>
+                </div>
+            </div>
+    </center>
+</body>
 </html>
