Implementación del método insertarCurso(CursoEntity curso) en clase CursoDAOImpl.java; modificaciones en paginas web.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Bootstrap Example</title>
+        <title>Menú Principal</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -29,14 +29,10 @@ and open the template in the editor.
         <div class="col-lg-12">
             <div class="row">
                 <div class="col-lg-3">
-                    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
-                        Crear estudiante
-                    </button>
+                    <a class="btn btn-primary" href="/getEstudiante">Crear estudiante</a>
                 </div>
                 <div class="col-lg-3">
-                    <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false">
-                        Crear curso
-                    </button>
+                    <a class="btn btn-default" href="/getCurso">Crear curso</a>
                 </div>
                 <div class="col-lg-3">
                     <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false">
