--- a/src/main/resources/templates/cursos.html
+++ b/src/main/resources/templates/cursos.html
@@ -44,9 +44,12 @@ and open the template in the editor.
                             
                             <div class="col-lg-12">
                                 <div class="row">
-                                    <div class="col-lg-8">
+                                    <div class="col-lg-6">
                                         <button type="submit" class="btn btn-info">CREAR</button>
                                     </div>
+                                    <div class="col-lg-6">
+                                        <a class="btn btn-default" href="/">REGRESAR</a>
+                                    </div>   
                                 </div>
                             </div>
                         </div>
