--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,8 +23,12 @@ and open the template in the editor.
         </style>
     </head>
 
-    <body>
-        <h1 align="center"><i>Análisis de Sistemas II - Equipo #2</i></h1>
+  
+    <body class="cotainer-fluid">
+        
+        <div class="row">
+        <div class="col-md-12">
+               <h1 align="center"><i>Análisis de Sistemas II - Equipo #2</i></h1>
     <center>
         <div class="col-lg-12">
             <div class="row">
@@ -46,5 +50,38 @@ and open the template in the editor.
                 </div>
             </div>
     </center>
+
+            
+        </div>
+    </div>
+        
+
+    <!-- /////////////////////////////////////////////////////////// -->
+    <div>
+        <div class ="row">
+            <div class="col-md-6">
+                <h1>Cargar Cursos SCV</h1>
+
+                <form method="POST" action="/CargaCursos" enctype="multipart/form-data">
+                    <input type="file" name="file" /><br/><br/>
+                    <input type="submit" value="Submit" />
+                </form>
+            </div>
+            <div class="col-md-6">
+                  <h1>Cargar Datos Estudiantes SCV</h1>
+
+                <form method="POST" action="/CargaEstudiantes" enctype="multipart/form-data">
+                    <input type="file" name="file" /><br/><br/>
+                    <input type="submit" value="Submit" />
+                </form>
+            </div>
+        </div>
+
+        
+
+
+        <!-- /////////////////////////////////////////////////////////// -->
+
+    </div>    
 </body>
 </html>
